--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -408,6 +408,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="do_not_search_specified_files_and_folders">Nu căuta fişierele şi dosarele specificate.\nUtilizaţi linia nouă ca separator.\nUtilizaţi oferte exact pentru nume dir: \"Test\".\nSau folosește Regex \'^[.].*\'\nExemple: ^\\\..*\n\"test\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
     <string name="regex_search">Căutare Regex</string>
     <string name="case_sensitive">Sensibil la caz</string>
+    <string name="stop_search_after_first_match">Oprește căutarea după primul meci</string>
     <string name="regex_can_not_be_compiled">Regex nu poate fi compilat</string>
     <string name="keep_both">Păstrați ambele</string>
     <string name="skip">Omitere</string>
