--- a/app/src/main/res/values-nb-rNO/strings.xml
+++ b/app/src/main/res/values-nb-rNO/strings.xml
@@ -408,6 +408,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="do_not_search_specified_files_and_folders">Ikke søk spesifikke filer og mapper.\nBruk ny linje som skilletegn.\nBruk sitater for nøyaktige dir navn: \"Test\".\nEller bruk Regex \'^[.].*\'\nEksempler: ^\\..*\n\"test\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
     <string name="regex_search">Regex søk</string>
     <string name="case_sensitive">Kassen er følsom</string>
+    <string name="stop_search_after_first_match">Stopp søk etter første treff</string>
     <string name="regex_can_not_be_compiled">Regex kan ikke kompileres</string>
     <string name="keep_both">Behold begge</string>
     <string name="skip">Hopp</string>
