--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -315,7 +315,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reload">Atualizar</string>
     <string name="wrap_words">Ajuste de palavras</string>
     <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">Ajustar texto caso este não caiba no tela. Também ativa a deslocação horizontal.</string>
-    <string name="recursive_search_in_current_directory">Pesquisa recursiva no diretório atual. Se a consulta possuir um asterisco (*), é utilizada a expressão regular (Regex) para a pesquisa, caso contrário verifique se a consulta está contida.</string>
+    <string name="recursive_search_in_current_directory">Pesquisa recursiva no diretório atual.</string>
     <string name="always_open_with_this_app">Sempre abrir com este aplicativo</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">Utilizar sempre esse aplicativo se a extensão do arquivo estiver nesta lista. Utilize, por exemplo, \'None, .html, .css , .js\' se quiser editar arquivos web ou arquivos que não tenham extensão.</string>
     <string name="template">Modelo</string>
@@ -402,6 +402,14 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">Importe as configurações do arquivo json de backup. Em caso de sucesso, o aplicativo é reiniciado.</string>
     <string name="failed_to_restore_settings_from_backup">Falha ao restaurar as configurações do backup</string>
     <string name="newline_is_new_paragraph">Nova linha = novo parágrafo</string>
+    <string name="search_in_content">Pesquisar no conteúdo</string>
+    <string name="max_search_depth">Profundidade da busca</string>
+    <string name="ignore_list">Lista de Ignorados</string>
+    <string name="do_not_search_specified_files_and_folders">Não procure por arquivos e pastas especificadas.\nUse nova linha como separador.\nUse aspas para nomes exatamente diretórios: \"Testar\".\nOu use Regex \'^[.].*\'\nExemplos: ├..*\n\"teste\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
+    <string name="regex_search">Busca por Regex</string>
+    <string name="case_sensitive">Sensível ao caso</string>
+    <string name="stop_search_after_first_match">Parar pesquisa após primeira correspondência</string>
+    <string name="regex_can_not_be_compiled">Regex não pode ser compilado</string>
     <string name="keep_both">Manter ambos</string>
     <string name="skip">Ignorar</string>
     <string name="overwrite">Substituir</string>
@@ -411,4 +419,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="copy_move_conflict_message">\'%s\' já existe em %s</string>
     <string name="additional_contexts_and_projects">Contextos e projetos adicionais</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Insira um espaço separado por @contextos e +projetos. Estes sempre estarão visíveis em todo.txt inserindo diálogos.</string>
+    <string name="infinite">Infinito</string>
 </resources>
