--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -315,7 +315,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reload">Перезавантажити</string>
     <string name="wrap_words">Перенесення рядків</string>
     <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">Додавати м\'які переноси замість відображення смуги горизонтальної прокрутки, коли текст не вміщається у ширину екрану.</string>
-    <string name="recursive_search_in_current_directory">Рекурсивний пошук у поточній директорії. Якщо запит містить зірочку (*), застосовується пошук за регулярним виразом, інакше перевіряє наявність запиту в директорії.</string>
+    <string name="recursive_search_in_current_directory">Рекурсивний пошук у поточному каталозі.</string>
     <string name="always_open_with_this_app">Завжди відкривати цією програмою</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">Завжди відкривати файли цією програмою, якщо розширення є у списку. Наприклад, додайте \'None, .html, .css , .js\' для редагування веб-файлів і файлів без розширення.</string>
     <string name="template">Шаблон</string>
@@ -402,6 +402,14 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">Імпортувати налаштування з резервної копії json файлу. При успішному завершенні, програму буде перезапущено.</string>
     <string name="failed_to_restore_settings_from_backup">Не вдалося відновити налаштування з резервної копії</string>
     <string name="newline_is_new_paragraph">Новий рядок = новий абзац</string>
+    <string name="search_in_content">Пошук у змісті</string>
+    <string name="max_search_depth">Глибина пошуку</string>
+    <string name="ignore_list">Чорний список</string>
+    <string name="do_not_search_specified_files_and_folders">Не шукайте вказані файли і папки.\nВикористовувати новий рядок як роздільник вузлів.\nВикористовуйте лапки для точних імен dir: \"Test\".\nАбо використайте Regex \'^[.].*\'\nПриклади: ^\\..*\n\"test\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
+    <string name="regex_search">Метод регулярних виразів</string>
+    <string name="case_sensitive">З урахуванням регістру</string>
+    <string name="stop_search_after_first_match">Зупинити пошук після першого матчу</string>
+    <string name="regex_can_not_be_compiled">Неможливо скомпілювати Regex</string>
     <string name="keep_both">Залишити обидва</string>
     <string name="skip">Пропустити</string>
     <string name="overwrite">Перезаписати</string>
@@ -411,4 +419,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="copy_move_conflict_message">\'%s\' вже існує в %s</string>
     <string name="additional_contexts_and_projects">Додаткові контексти та проєкти</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Уведіть контексти, розділені пробілами і +проєкти. Вони завжди будуть видимі в todo.txt діалогах.</string>
+    <string name="infinite">Нескінченно</string>
 </resources>
