--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -408,7 +408,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="do_not_search_specified_files_and_folders">Non cercare file e cartelle specificati.\nUsa una nuova riga come separatore.\nUsa le virgolette per nomi esatti di directory: \"Test\".\nOppure usa la regex \'^[.].*\'\nEsempi: ^\\..*\n\"test\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
     <string name="regex_search">Ricerca con regex</string>
     <string name="case_sensitive">Distingui maiuscole e minuscole</string>
-    <string name="stop_search_after_first_match">Interrompe la ricerca dopo la prima corrispondenza</string>
+    <string name="stop_search_after_first_match">Interrompi la ricerca dopo la prima corrispondenza</string>
     <string name="regex_can_not_be_compiled">La regex non può essere compilata</string>
     <string name="keep_both">Mantieni entrambi</string>
     <string name="skip">Salta</string>
