--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -403,6 +403,13 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="failed_to_restore_settings_from_backup">No s\'ha pogut restaurar la configuració de la còpia de seguretat</string>
     <string name="newline_is_new_paragraph">Nova línia = paràgraf nou</string>
     <string name="search_in_content">Cerca al contingut</string>
+    <string name="max_search_depth">Profunditat de cerca</string>
+    <string name="ignore_list">Llista d\'ignorats</string>
+    <string name="do_not_search_specified_files_and_folders">No cerqueu fitxers i carpetes especificats.\nUtilitzeu una línia nova com a separador.\nUtilitzeu cometes per a noms exactes de carpetes: \"Prova\".\nO utilitzeu el Regex \'^[.].*\'\nExamples: ^\\..*\n\"prova\"\n\"Prova\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
+    <string name="regex_search">Cerca Regex</string>
+    <string name="case_sensitive">Sensible a majúscules</string>
+    <string name="stop_search_after_first_match">Atura la cerca després de la primera coincidència</string>
+    <string name="regex_can_not_be_compiled">No es pot compilar el Regex</string>
     <string name="keep_both">Mantén els dos</string>
     <string name="skip">Omet</string>
     <string name="overwrite">Sobreescriu</string>
@@ -412,4 +419,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="copy_move_conflict_message">«%s» ja existeix a %s</string>
     <string name="additional_contexts_and_projects">Contextos i projectes addicionals</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Introduïu @contextos i +projectes separats per espais. Aquests sempre seran visibles als quadres de diàleg d\'inserció del todo.txt.</string>
+    <string name="infinite">Infinit</string>
 </resources>
