--- a/app/src/main/res/values-sc/strings.xml
+++ b/app/src/main/res/values-sc/strings.xml
@@ -405,7 +405,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="search_in_content">Chirca in su cuntenutu</string>
     <string name="max_search_depth">Profundidade de chirca</string>
     <string name="ignore_list">Lista de ignorados</string>
+    <string name="do_not_search_specified_files_and_folders">Non chirches sos documentos e sas cartellas dislindados.\nImprea una lìnia noa comente separadore.\nImprea sas virguleddas pro sos nùmenes esatos de sas cartellas: \"Proa\".\nO imprea Regex \'^[.].*\'\nEsèmpios: ^\\..*\n\"proa\"\n\"Proa\"\n.*segretu.*\n.*BACKUP.*\n.*.ini</string>
+    <string name="regex_search">Chirca Regex</string>
+    <string name="case_sensitive">Distinghe sas maiùscolas</string>
     <string name="stop_search_after_first_match">Acabba sa chirca a pustis de sa prima currispondèntzia</string>
+    <string name="regex_can_not_be_compiled">Sa regex non si podet compilare</string>
     <string name="keep_both">Mantene·los ambos</string>
     <string name="skip">Brinca</string>
     <string name="overwrite">Subraiscrie</string>
@@ -415,4 +419,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="copy_move_conflict_message">\'%s\' esistit giai in %s</string>
     <string name="additional_contexts_and_projects">Cuntestos e progetos additzionales</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Inserta @cuntestos e +progetos iscrobados dae ispàtzios. Custos ant a èssere semper visìbiles in sas ventanas de diàlogu de insertadura de todo.txt.</string>
+    <string name="infinite">Infinitu</string>
 </resources>
