[ci skip] Update translations (Persian)

--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -27,6 +27,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="create_folder">ایجاد پوشه</string>
     <string name="create_new_document">ایجاد پرونده جدید</string>
     <string name="move">بریدن</string>
+    <string name="copy">Copy</string>
     <string name="info">اطلاعات</string>
     <string name="file_folder_already_exists_please_use_a_different_name">Googel translator</string>
     <string name="import_from_device">درون‌ریزی از دستگاه</string>
@@ -122,6 +123,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="document_browser">مرورگر پرونده</string>
     <string name="file_browser">کاوش فایل ها</string>
     <string name="set_due_date">Set due date</string>
+    <string name="insert_replace_date">وارد کردن تصویر</string>
     <string name="create_note" needed="false">ایجاد یادداشت</string>
     <string name="special_documents" needed="false">مطالب ویژه</string>
     <string name="keep_screen_on" needed="false">روشن نگه داشتن صفحه نمایش</string>
@@ -163,6 +165,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending_if_two_or_more_spaces">فاصله‌های پایان خطوط را رنگی می‌کند</string>
     <string name="use_monospace_for_code">از فونت monospace برای کد استفاده کنید</string>
     <string name="disable_code_block_highlight">غیرفعال کردن هایلایت کردن بلوک‌های کد</string>
+    <string name="auto_renumber_ordered_list">Auto-renumber ordered lists</string>
+    <string name="auto_renumber_ordered_list_slowdown">This option may impact app performance.</string>
     <string name="use_different_fonttype_slow_down">از یک نوع فونت دیگر استفاده کنید. تغییر آن به صورت پویا بر عملکرد اپ تاثیر می گذارد.</string>
     <string name="general">عمومی</string>
     <string name="resources">منابع</string>
@@ -175,11 +179,13 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_page_down">پایین بردن صفحه (Page Down)</string>
     <string name="move_text_one_line_up">متن رو یک خط ببر بالا</string>
     <string name="move_text_one_line_down">متن رو یک خط ببر پایین</string>
+    <string name="start_new_line_below">Start new line below</string>
     <string name="key_pos_1">ابتدای خط (کلید Home)</string>
     <string name="key_pos_end">انتهای خط (کلید End)</string>
     <string name="key_pos_1_document">آغاز پرونده</string>
     <string name="key_pos_end_document">پایان پرونده</string>
     <string name="key_ctrl_a">انتخاب همه (Ctrl + A)</string>
+    <string name="key_tab">Tabulator</string>
     <string name="start_on_bottom">شروع از پایین</string>
     <string name="start_on_bottom_when_loading_document">بعد از اینکه پرونده بارگزاری شد، موقعیت مکان‌نما در انتهای پرونده قرار بگیرد</string>
     <string name="unordered_list_character">کاراکتر لیست بدون ترتیب</string>
@@ -188,13 +194,80 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="unordered_list_char_asterisk">ستاره (*)</string>
     <string name="unordered_list_char_plus">مثبت (+)</string>
     <string name="filemanager_doesnot_supply_required_data__appspecific">مارکور فقط می‌تواند فایل‌هایی را ویرایش کند که محلی هستند و به صورت آفلاین در دسترس هستند و فایل منیجر‌هایی را که مسیر کامل فایل را نمی‌دهند را ساپورت نمی‌کند.</string>
+    <string name="sync_to_local_folder_notice">Note: Sync apps may place files in custom folders. Open them by changing Markor\'s document folder accordingly, or in another file manager.</string>
     <string name="configure_in_the_apps_settings">پیکربندی در تنظیمات برنامه‌ها</string>
+    <string name="vertical_alignment">Vertical alignment</string>
+    <string name="horizontal_alignment">Horizontal alignment</string>
     <string name="default_">پیش‌فرض</string>
     <string name="left">چپ</string>
     <string name="right">راست</string>
     <string name="top">بالا</string>
     <string name="bottom">پایین</string>
     <string name="center">وسط</string>
+    <string name="textaction_spacing">Text action spacing</string>
+    <string name="horizontal_space_between_textactions">Horizontal space between text action buttons</string>
     <string name="center_text">متن وسط باشد</string>
+    <string name="edit_text_in_center_of_screen">متن را در وسط صفحه‌نمایش ویرایش کنید</string>
+    <string name="clipboard">Clipboard</string>
+    <string name="select_existing_document">انتخاب سند</string>
+    <string name="open_source_licenses">Open Source Licenses</string>
+    <string name="rate_this_app">به این برنامه امتیاز دهید</string>
+    <string name="translate">ترجمه</string>
+    <string name="more_info_and_help">اطّلاعات بیش‌تر و راهنمایی</string>
+    <string name="report_bugs">گزارش اشکالات</string>
+    <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">Geliştiriciye bağış yapma veya bu projeye katkıda bulunma hakkında daha fazla bilgi alın.</string>
+    <string name="join_community">Приєднатися до спільноти</string>
+    <string name="bug_reports_suggest_improvements">இந்த செயலி குறித்த கருத்துக்கள் மற்றும் பிழைகளை தெரிவிக்கவும் அல்லது மேம்படுத்தத்தல்களை பரிந்துரைக்கவும்</string>
+    <string name="help_translating_this_app">மற்ற மொழிகளில் இந்த செயலியை மொழிபெயர்க்கவும்</string>
+    <string name="source_code">کُد منبع</string>
+    <string name="project_license">项目开源协议</string>
+    <string name="contribute_code_to_this_project_anybody_welcome">Contribute code to the project. Everybody is welcome to do so, including newcomers</string>
+    <string name="project_team">فريق المشروع</string>
+    <string name="contributors_public_add_yourself_description">Show contributor info. Provide it to be shown here on an opt-in basis after contributing</string>
+    <string name="descending">نزولی</string>
+    <string name="ascending">صعودی</string>
+    <string name="disable_spelling_underline">Disable spelling underline</string>
+    <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">Keyboard suggestions stay, red underline vanishes</string>
+    <string name="location">مکان</string>
+    <string name="text_lines">خطوط النص</string>
+    <string name="text_characters">Text Characters</string>
+    <string name="text_words">Text Words</string>
+    <string name="directory">دایرکتوری</string>
+    <string name="recently_viewed_documents">سندهایی که اخیرا استفاده شده است</string>
+    <string name="details">ریزگان</string>
+    <string name="calendar">سالنامه</string>
+    <string name="warning_disallowed_sd_access">Warning! The app doesn\'t have the permission to save this file, all changes will be lost. There is no possibility to resolve the problem or to confirm something, Android denies any access here.</string>
+    <string name="error_picture_selection">No picture selected, taken or saved.</string>
+    <string name="gallery_picture">تصاویر گالری</string>
+    <string name="camera_picture">Camera picture</string>
+    <string name="enable_undo_and_redo_be_patient">Enable undo and redo actions. Only suited for advanced use, be patient to not delete something important. Close and open editor to clear history.</string>
+    <string name="description">توضیحات</string>
+    <string name="edit_picture">امکان مسلح کردن وجود ندارد</string>
+    <string name="math">ریاضی</string>
+    <string name="table_of_contents">فهرست محتوا</string>
+    <string name="miscellaneous">متفرقه</string>
+    <string name="textaction">Text action</string>
+    <string name="textactions">Text actions</string>
+    <string name="edit_mode">حالت ویرایش</string>
+    <string name="mount_storage">‏اتصال حافظهٔ USB</string>
+    <string name="application_needs_access_to_storage_mount_it">Permission is required to access this storage. Mount the storage to give access. Confirm this dialog to get a popup. Select the storage there and press select.</string>
+    <string name="share_into">Share into</string>
+    <string name="favourite">علاقه‌مندی</string>
+    <string name="favourites">علاقه مندی ها</string>
     <string name="please_wait">لطفاً منتظر بمانید</string>
+    <string name="app_start_folder">مجلد بدء التطبيق</string>
+    <string name="tab_width">Tab width</string>
+    <string name="amount_of_space_for_tab">Amount of space characters to display tabulator</string>
+    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">The selected file may be a plaintext file. Do you want to open it in the editor, or in another app?\n\nDo not try to open binary files. If you are not sure, open with other app.</string>
+    <string name="list_in_recent_files">List in recent files</string>
+    <string name="reload">بارگزاری مجدد</string>
+    <string name="wrap_words">Wrap words</string>
+    <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">Soft break if text doesn\'t fit to screen width. Else enable horizontal scrolling.</string>
+    <string name="recursive_search_in_current_directory">Recursive search in current directory.</string>
+    <string name="always_open_with_this_app">Always open with this app</string>
+    <string name="always_open_files_with_this_app_when_list_contains_file_extension">Always open files with this app when the list contains the file extension. Use \'None, .html, .css , .js\' for example if you want to edit web files and those without file extension.</string>
+    <string name="template">تمپلیت</string>
+    <string name="send_debug_log">فرستادن گزارش های اشکال زدایی</string>
+    <string name="print_pdf">چاپ PDF</string>
+    <string name="bigger_headings">Bigger headings</string>
 </resources>
