--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -248,6 +248,56 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="miscellaneous">متفرقه</string>
     <string name="textaction">Text action</string>
     <string name="textactions">Text actions</string>
+    <string name="prefer_view">Prefer view</string>
+    <string name="no_calendar_app_is_installed">No calendar app is installed!</string>
+    <string name="popular_documents">Popular documents</string>
+    <string name="color">Color</string>
+    <string name="zero_width_space">Zero-width space</string>
+    <string name="basic_color_scheme">Basic color scheme</string>
+    <string name="background_foreground_color_in_editor_works_dark_light">Changes background and foreground color of the text editor. Adjusts to app theme so available in light and dark theme. Syntax highlighting colors remain the same.</string>
+    <string name="preset">Preset</string>
+    <string name="foreground">Foreground</string>
+    <string name="background">Background</string>
+    <string name="set_foreground_or_background_color_hexcolor_also_possible">Set foreground or background color of text? Inserting hex color code is also possible.</string>
+    <string name="type">Type</string>
+    <string name="folder">Folder</string>
+    <string name="folder_is_created_without_extension">- Folder is created without file extension</string>
+    <string name="keep_existing_file">- Files and folders are not overwritten</string>
+    <string name="multiple_windows">Multiple windows</string>
+    <string name="font">Font</string>
+    <string name="open_new_documents_always_in_new_window">Open documents always in separate windows. Switch using the \'recents\' key of your device.</string>
+    <string name="enter_or_select_format">Enter or select format</string>
+    <string name="pick_date">Pick date</string>
+    <string name="pick_time">Pick time</string>
+    <string name="get_format_instead_date_or_time">Get format instead date or time</string>
+    <string name="always_use_current_date_and_time">Always use current date &amp; time</string>
+    <string name="result">Result</string>
+    <string name="just_time">Time only</string>
+    <string name="just_date">Date only</string>
+    <string name="last_used">Last used</string>
+    <string name="my_note">my_note</string>
+    <string name="close">Close</string>
+    <string name="cancel">Cancel</string>
+    <string name="do_you_like_this_project_want_donate_to_keep_alive">Do you enjoy this project? Do you want to support further improvements and bug fixes?\n\nDeveloping apps and writing related blog posts take a lot of time! If you want to help the project to continue, please consider a small donation!\n\nThis project is developed in spare time, completely for free and without any advertisements!</string>
+    <string name="app_start_tab">App start tab</string>
+    <string name="tab_to_select_at_start">Tab to select when starting the app</string>
+    <string name="swipe_to_change_mode">Swipe to change mode</string>
+    <string name="swipe_to_change_to_edit_or_view_mode">Swipe to change to edit or view mode (opposite of the current mode)</string>
+    <string name="folder_first">Folder first</string>
+    <string name="go_to">Go to</string>
+    <string name="appdata_public">AppData (public)</string>
+    <string name="appdata_private">AppData (private)</string>
+    <string name="appdata_sdcard">AppData (SD Card)</string>
+    <string name="internal_storage">Internal storage</string>
+    <string name="open_the_document_from_main_view">You can open the document from main view on the bottom, the file browser or the launcher. There is also a option to append text shared into Markor.</string>
+    <string name="notebook_is_the_home_of_your_files">Notebook is the folder that Markor loads in the file browser when the app is started. It is the home folder of your files.</string>
+    <string name="quicknote_is_the_fastest_option_to_write_down_notes">QuickNote is the fastest option to write down notes. It is a file in Markdown format with default location &gt;Notebook/QuickNote.md&lt;, you can set a custom filepath in the settings.</string>
+    <string name="todo_is_the_easiest_way_">Manage your tasks with ToDo. It is a file in todo.txt format with default location &gt;Notebook/todo.txt&lt;, you can set a custom filepath in the settings.</string>
+    <string name="navigationbar_color">Navigation bar color</string>
+    <string name="black">Black</string>
+    <string name="white">White</string>
+    <string name="view">View</string>
+    <string name="view_mode">View mode</string>
     <string name="edit_mode">حالت ویرایش</string>
     <string name="mount_storage">‏اتصال حافظهٔ USB</string>
     <string name="application_needs_access_to_storage_mount_it">Permission is required to access this storage. Mount the storage to give access. Confirm this dialog to get a popup. Select the storage there and press select.</string>
@@ -270,4 +320,62 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="send_debug_log">فرستادن گزارش های اشکال زدایی</string>
     <string name="print_pdf">چاپ PDF</string>
     <string name="bigger_headings">Bigger headings</string>
+    <string name="increase_text_size_of_headings_according_to_level">Increase text size of headers according to level (# h1, ## h2. ### h3…)</string>
+    <string name="current">جاری</string>
+    <string name="record_audio">ضبط صدا</string>
+    <string name="attach">اتصال</string>
+    <string name="copy_file">کپی کردن فایل</string>
+    <string name="page">صفحه</string>
+    <string name="experimental_features">امکانات آزمایشی</string>
+    <string name="tools">&amp;ابزارها</string>
+    <string name="reading">مطالعه</string>
+    <string name="read">Read</string>
+    <string name="table">جدول</string>
+    <string name="how_much_columns_press_table_button_long_to_start_table">How many columns? Press table button long to start a table (insert header), press short to add a row.</string>
+    <string name="example_of_a_markdown_table">Example of a Markdown table</string>
+    <string name="delete_lines">Delete lines</string>
+    <string name="unordered_list">Unordered list</string>
+    <string name="ordered_list">فهرست مرتب</string>
+    <string name="check_list">قائمة التحقق</string>
+    <string name="open_link">باز کردن پیوند</string>
+    <string name="common_color_picker">انتخابگر رنگ</string>
+    <string name="date_and_time">تاریخ و زمان</string>
+    <string name="jump_to_bottom">پرش به ماه</string>
+    <string name="quote">نقل قول</string>
+    <string name="heading">عنوان</string>
+    <string name="heading_1">سرشناسهٔ ۱</string>
+    <string name="heading_2">سرشناسهٔ ۲</string>
+    <string name="heading_3">تیتر ۳</string>
+    <string name="heading_4">تیتر ۴</string>
+    <string name="heading_5">سرشناسهٔ ۵</string>
+    <string name="bold">ضخیم</string>
+    <string name="italic">Italic</string>
+    <string name="highlighted">Highlighted</string>
+    <string name="strikeout">Strike out</string>
+    <string name="inline_code">Inline code</string>
+    <string name="horizontal_line">Horizontal line</string>
+    <string name="toggle_done">Toggle done</string>
+    <string name="link_color">Link color</string>
+    <string name="add_context">Add context</string>
+    <string name="add_project">Add project</string>
+    <string name="archive_completed_tasks">Archive completed tasks</string>
+    <string name="sort_alphabetically">Sort alphabetically</string>
+    <string name="search_in_content">انتخاب محتوا</string>
+    <string name="max_search_depth">Search depth</string>
+    <string name="ignore_list">لیست موارد نادیده گرفته شده</string>
+    <string name="do_not_search_specified_files_and_folders">Do not search specified files and folders.\nUse new line as separator.\nUse quotes for exact dir names: \"Test\".\nOr use Regex \'^[.].*\'\nExamples: ^\\..*\n\"test\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
+    <string name="regex_search">Regex search</string>
+    <string name="case_sensitive">حساس به کوچکی و بزرگی حروف</string>
+    <string name="stop_search_after_first_match">إيقاف البحث بعد المباراة الأولى</string>
+    <string name="regex_can_not_be_compiled">Regex can not be compiled</string>
+    <string name="keep_both">Keep Both</string>
+    <string name="skip">Skip</string>
+    <string name="overwrite">رونویسی</string>
+    <string name="keep_both_all">هر دو پرونده حفظ شود</string>
+    <string name="skip_all">Skip (all)</string>
+    <string name="overwrite_all">Overwrite (all)</string>
+    <string name="copy_move_conflict_message">در %s موجود می باشد</string>
+    <string name="additional_contexts_and_projects">بعد از اینکه پرونده بارگزاری شد، موقعیت مکان‌نما در انتهای پرونده قرار بگیرد</string>
+    <string name="enter_space_seperated_contexts_and_projects_these_will">Enter space-separated @contexts and +projects. These will always be visible at todo.txt insert dialogs.</string>
+    <string name="infinite">نامحدود</string>
 </resources>
