--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -27,6 +27,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="create_folder">建立資料夾</string>
     <string name="create_new_document">建立新的文件</string>
     <string name="move">移動</string>
+    <string name="copy">複製</string>
     <string name="info">資訊</string>
     <string name="file_folder_already_exists_please_use_a_different_name">文件／資料夾名稱已存在，請重新命名</string>
     <string name="import_from_device">從裝置匯入</string>
@@ -288,6 +289,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="send_debug_log">發送偵錯日誌</string>
     <string name="print_pdf">列印 / PDF</string>
     <string name="current">現在</string>
+    <string name="record_audio">錄音</string>
     <string name="attach">附件</string>
     <string name="copy_file">複製檔案</string>
     <string name="page">頁面</string>
@@ -327,5 +329,23 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="drag">拖曳</string>
     <string name="created">已建立</string>
     <string name="file_encryption_password">檔案加密密碼</string>
+    <string name="could_not_encrypt_file_content_the_file_was_not_saved">無法加密檔案內容。檔案未儲存。</string>
     <string name="code_block">程式碼區塊</string>
+    <string name="loading_default_value">正在載入預設值</string>
+    <string name="file_settings">檔案設定</string>
+    <string name="search_and_replace">搜尋/取代</string>
+    <string name="search_for">搜尋</string>
+    <string name="replace_with">取代為</string>
+    <string name="replace_all">全部取代</string>
+    <string name="backup_settings">備份設定</string>
+    <string name="restore_settings">還原設定</string>
+    <string name="failed_to_create_backup">建立備份失敗</string>
+    <string name="export_settings_to_json_file">匯出設定至 JSON 文件</string>
+    <string name="case_sensitive">區分大小寫</string>
+    <string name="keep_both">兩者都保留</string>
+    <string name="skip">跳過</string>
+    <string name="overwrite">覆寫</string>
+    <string name="skip_all">全部跳過</string>
+    <string name="overwrite_all">全部覆寫</string>
+    <string name="infinite">無限</string>
 </resources>
