[ci skip] Update translations (Chinese Traditional)

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -188,6 +188,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_tab">表格</string>
     <string name="start_on_bottom">從底端開始</string>
     <string name="start_on_bottom_when_loading_document">當載入文件後，游標位於末尾</string>
+    <string name="unordered_list_character">未排序清單字元</string>
+    <string name="character_to_start_items_of_unordered_list_with">這些字元用來標示未排序清單</string>
     <string name="unordered_list_char_dash">連接符 (-)</string>
     <string name="unordered_list_char_asterisk">星號 (*)</string>
     <string name="unordered_list_char_plus">加號 (+)</string>
@@ -225,8 +227,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="descending">降冪</string>
     <string name="ascending">升羃</string>
     <string name="disable_spelling_underline">取消拼寫底線</string>
+    <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">鍵盤建議停留，紅色底線消失</string>
     <string name="location">地點</string>
     <string name="text_lines">文字行</string>
+    <string name="text_characters">純文字字元</string>
+    <string name="text_words">純文字 字詞</string>
     <string name="directory">資料夾</string>
     <string name="recently_viewed_documents">最近檔案</string>
     <string name="details">細節</string>
